--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <div class="header">
     <section id="header" class="">
         <div>
-        <a href="#"><img src="img/Logo.png" alt="Palestine Logo" class="logo"></a><!--Palestain Logo-->
+        <a href="#"><img src="img/logo.png" alt="Palestine Logo" class="logo"></a><!--Palestain Logo-->
         <!-- <span class="shop">shop</span> -->
         </div>
         <div>
